practice-htmlフォルダのファイルを配置

--- a/index.html
+++ b/index.html
@@ -8,3 +8,6 @@
     <p>This is my page</p>
   </body>
 </html>
+<a href="practice-html/elements.html"
+	   title="1つ中のフォルダの別ファイルへのリンク"
+	   target="_blank"> elements.html </a>
