--- a/practice-html/structure.html
+++ b/practice-html/structure.html
@@ -13,5 +13,6 @@
       -->
    </body>
 </html>
-
-
+<a href="elements.html"
+	   title="同じフォルダの別ファイルへのリンク"
+	   target="_blank"> elements.html </a>
