--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     
     <h2>本テーマについて</h2>
     <p>(ここにはこのテーマの学習の目的と目標を記載してください.　シラバスを参考にしましょう.) (100文字)</p>
-    <p></p>
+    <p>目的は, 専攻する情報工学の専門科目の基礎知識を応用して実践的な能力を修得すること.
+    <br>目標は, Webページを作成できるようになるWebページの記述方法とHTML, CSS, JavaScriptについて学び, HTML等を用いたWebページ作成ができるようになること.</p>
 
     <h2>プロジェクト課題について</h2>
     <p>(ここにはみなさんが取り組んだプロジェクト課題について書きましょう.) (200文字以上)</p>
