--- a/index.html
+++ b/index.html
@@ -3,32 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>「Webコンテンツ作成」の成果</h1>
     
-    <h2>本テーマについて</h2>
-    <p>(ここにはこのテーマの学習の目的と目標を記載してください.　シラバスを参考にしましょう.) (100文字)</p>
+    <h2 class="Thema">本テーマについて</h2>
+    <p class="info">(ここにはこのテーマの学習の目的と目標を記載してください.　シラバスを参考にしましょう.) (100文字)</p>
     <p>目的は, 専攻する情報工学の専門科目の基礎知識を応用して実践的な能力を修得すること.
     <br>目標は, Webページを作成できるようになるWebページの記述方法とHTML, CSS, JavaScriptについて学び, HTML等を用いたWebページ作成ができるようになること.</p>
 
-    <h2>プロジェクト課題について</h2>
-    <p>(ここにはみなさんが取り組んだプロジェクト課題について書きましょう.) (200文字以上)</p>
+    <h2 class="project">プロジェクト課題について</h2>
+    <p class="info">(ここにはみなさんが取り組んだプロジェクト課題について書きましょう.) (200文字以上)</p>
     <p></p>
     <p>プロジェクト課題で作成したページ:<a href="" 
                                      title="" 
                                      target="_blank"> project.html </a></p>
     <p></p>
 
-    <h2>数当てゲーム</h2>
-    <p>(このテーマの第3回から数当てゲームを作りますので,　その後にゲームの概要を説明してください.) (200文字以上)</p>
+    <h2 class="kazuate">数当てゲーム</h2>
+    <p class="info">(このテーマの第3回から数当てゲームを作りますので,　その後にゲームの概要を説明してください.) (200文字以上)</p>
     <p>数当てゲームのページ:<a href="" 
                            title="" 
                            target="_blank"> kazuate.html </a></p>
 
-    <h2>各授業回の学習事項</h2>
+    <h2 class="gakusyu">各授業回の学習事項</h2>
     <h3>第1回 WWW と HTML</h3>
-    <p>(今回学習した事柄を説明してください.) (100文字以上)</p>
+    <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p>今回の授業では、 <strong>HTMLテキストの要素</strong>, <strong>HTML文書の構成</strong>, <strong>ハイパーリンク</strong>, <strong>画像の埋め込み</strong>, <strong>説明リスト</strong> について学んだ。
       <br>HTML文書全体の構成を学んだことで、基本的なWebページを作成することができるようになった。
       <br>身構えていたが今のところそんなに難しくはないのでこの調子で頑張っていきたい。
@@ -38,25 +39,25 @@
                    target="_blank"> 演習1-4: HTMLの様々な要素 </a></p>
     
     <h3>第2回 CSS による Web ページの装飾</h3>
-    <p>(今回学習した事柄を説明してください.) (100文字以上)</p>
+    <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p>演習の成果:<a href="" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank">  </a></p>
 
     <h3>第3回 JavaScript の基本</h3>
-    <p>(今回学習した事柄を説明してください.) (100文字以上)</p>
+    <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p>演習の成果:<a href="" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank">  </a></p>
 
     <h3>第4回 DOM と JavaScript</h3>
-    <p>(今回学習した事柄を説明してください.) (100文字以上)</p>
+    <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p>演習の成果:<a href="" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank">  </a></p>
 
     <h3>第5回 イベント処理</h3>
-    <p>(今回学習した事柄を説明してください.) (100文字以上)</p>
+    <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p>演習の成果:<a href="" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank">  </a></p>
