--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     
     <h3>第2回 CSS による Web ページの装飾</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
-    <p>演習の成果:<a href="" 
+    <p>演習の成果:<a href="practice-css/browser-intro.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
-                   target="_blank">  </a></p>
+                   target="_blank"> 演習2-3: ウェブブラウザ説明ページの装飾 </a></p>
 
     <h3>第3回 JavaScript の基本</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
