プロジェクト課題のhtml

--- a/project.html
+++ b/project.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
-    <link rel="stylesheet" href="project.css">
   </head>
   <body>
     <h1>世界の天気</h1>
+    <h2>検索結果が1件あります</h2>
     <ul>
         <li>経度: 116.3972</li>
         <li>緯度: 39.9075</li>
