プロジェクト課題

--- a/project.html
+++ b/project.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html class="background">
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link rel="stylesheet" href="project.css">
   </head>
   <body>
     <h1>世界の天気</h1>
@@ -20,3 +21,6 @@
     </ul>
   </body>
 </html>
+<a href="index.html" 
+   title="同じフォルダの別ファイルへのリンク" 
+   target="_blank">  </a></p>
