--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <h2 class="project">プロジェクト課題について</h2>
     <p class="info">(ここにはみなさんが取り組んだプロジェクト課題について書きましょう.) (200文字以上)</p>
     <p class="nyuryoku"></p>
-    <p>プロジェクト課題で作成したページ:<a href="project.html" 
+    <p class="link">プロジェクト課題で作成したページ:<a href="project.html" 
                                      title="同じフォルダの別ファイルへのリンク" 
                                      target="_blank"> project.html </a></p>
 
     <h2 class="kazuate">数当てゲーム</h2>
     <p class="info">(このテーマの第3回から数当てゲームを作りますので,　その後にゲームの概要を説明してください.) (200文字以上)</p>
     <p class="nyuryoku"></p>
-    <p>数当てゲームのページ:<a href="" 
+    <p class="link">数当てゲームのページ:<a href="kazuate.html" 
                            title="" 
                            target="_blank"> kazuate.html </a></p>
 
@@ -33,35 +33,35 @@
     <p class="nyuryoku">今回の授業では、 <strong>HTMLテキストの要素</strong>, <strong>HTML文書の構成</strong>, <strong>ハイパーリンク</strong>, <strong>画像の埋め込み</strong>, <strong>説明リスト</strong> について学んだ。
       <br>HTML文書全体の構成を学んだことで、基本的なWebページを作成することができるようになった。
       <br>身構えていたが今のところそんなに難しくはないのでこの調子で頑張っていきたい。</p>
-    <p>演習の成果:<a href="practice-html/elements.html" 
+    <p class="link">演習の成果:<a href="practice-html/elements.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank"> 演習1-4: HTMLの様々な要素 </a></p>
     
     <h3>第2回 CSS による Web ページの装飾</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p class="nyuryoku"></p>
-    <p>演習の成果:<a href="practice-css/browser-intro.html" 
+    <p class="link">演習の成果:<a href="practice-css/browser-intro.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank"> 演習2-3: ウェブブラウザ説明ページの装飾 </a></p>
 
     <h3>第3回 JavaScript の基本</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p class="nyuryoku"></p>
-    <p>演習の成果:<a href="" 
+    <p class="link">演習の成果:<a href="practice-js/obj-practice.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
-                   target="_blank">  </a></p>
+                   target="_blank"> 演習3-6: オブジェクトの参照 </a></p>
 
     <h3>第4回 DOM と JavaScript</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p class="nyuryoku"></p>
-    <p>演習の成果:<a href="" 
+    <p class="link">演習の成果:<a href="" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank">  </a></p>
 
     <h3>第5回 イベント処理</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p class="nyuryoku"></p>
-    <p>演習の成果:<a href="" 
+    <p class="link">演習の成果:<a href="" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank">  </a></p>
 
