--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <h3>第4回 DOM と JavaScript</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p class="nyuryoku"></p>
-    <p class="link">演習の成果:<a href="" 
+    <p class="link">演習の成果:<a href="practice-eventdom/tashizan.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
-                   target="_blank">  </a></p>
+                   target="_blank"> 演習4-10: 足し算ページ </a></p>
 
     <h3>第5回 イベント処理</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
@@ -67,3 +67,6 @@
 
   </body>
 </html>
+    index.html における「数当てゲーム」の節に課題4-1に実施内容を説明する文章を 100 文字程度書き足します．
+    第4回の「演習の成果」として次のリンクを設置しましょう．
+        演習4-10 の practice-eventdom/tashizan.html
