--- a/practice-eventdom/tashizan.html
+++ b/practice-eventdom/tashizan.html
@@ -17,3 +17,6 @@
 	<button id="calc">計算</button>
   </body>
 </html>
+<a href="../index.html" 
+　　title="1つ外のフォルダの別ファイルへのリンク" 
+   target="_blank"> </a>
