--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <h3>第5回 イベント処理</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p class="nyuryoku"></p>
-    <p class="link">演習の成果:<a href="" 
+    <p class="link">演習の成果:<a href="practice-dom2/dom2-exercise.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
-                   target="_blank">  </a></p>
+                   target="_blank"> 演習5-7: DOMプログラミング(2) </a></p>
 
   </body>
 </html>
