--- a/practice-dom2/dom2-exercise.html
+++ b/practice-dom2/dom2-exercise.html
@@ -15,3 +15,6 @@
 	  <button id="show">表示</button>
   </body>
 </html>
+<a href="../index.html" 
+   title="1つ外のフォルダの別ファイルへのリンク" 
+   target="_blank"> index.html </a>
