--- a/index.html
+++ b/index.html
@@ -15,14 +15,32 @@
 
     <h2 class="project">プロジェクト課題について</h2>
     <p class="info">(ここにはみなさんが取り組んだプロジェクト課題について書きましょう.) (200文字以上)</p>
-    <p class="nyuryoku"></p>
+    <p class="nyuryoku">私はグルメ情報のプロジェクト課題を選択した。
+      <br>第１回ではただHTMLのp要素に情報を書き込んだだけだったものが、
+      <br>第２回でCSSを作成して色がつき、
+      <br>第３回で gourmet.js のデータを取り出しコンソールに出力できるようになり、
+      <br>第４回でテキストボックス入力した検索キーをコンソールに出力できるようにし、
+      <br>第５回でコンソールに出力していた情報をページに出力できるようになり、
+      <br>第６回で検索キーによって対応したデータを出力できるようになっていったことにとても感動した。
+      <br>出力したものを２回目以降削除するプログラムを作成するのが難しかった。
+    </p>
     <p class="link">プロジェクト課題で作成したページ:<a href="project.html" 
                                      title="同じフォルダの別ファイルへのリンク" 
                                      target="_blank"> project.html </a></p>
 
     <h2 class="kazuate">数当てゲーム</h2>
     <p class="info">(このテーマの第3回から数当てゲームを作りますので,　その後にゲームの概要を説明してください.) (200文字以上)</p>
-    <p class="nyuryoku"></p>
+    <p class="nyuryoku">数当てゲームは、第３回時点では、予想を４に固定して、ページを読み込むたびに答えの数字を1~10の中から乱数で決める。
+      <br>その後４回の判定をコンソール上で行い、
+      <br>回答回数が4回以上なら「答えは ◯ でした．すでにゲームは終わっています」、
+      <br>正解なら 「正解です．おめでとう!」、
+      <br>回答が間違っていて、
+      <br>回答回数が3回ならば 「まちがい．残念でした答えは ◯ です．」、
+      <br>回答回数2回以下，かつ 予想＜答えならば 「まちがい．答えはもっと大きいですよ」、
+      <br>回答回数2回以下，かつ 予想＞答えならば 「まちがい．答えはもっと小さいですよ」と出力するプログラムである。
+      <br>第４回時点では、テキストボックスに入力した数を取り出し予想の変数に入れ、回答ボタンを押すたびに hantei() を呼び出して判定を行い、
+      <br>正解を表示したあとに hantei() を呼び出すとコンソールに「答えは ◯ でした．すでにゲームは終わっています」と出力するちゃんとした数当てゲームのプログラムが完成した。
+    </p>
     <p class="link">数当てゲームのページ:<a href="kazuate.html" 
                            title="" 
                            target="_blank"> kazuate.html </a></p>
@@ -32,38 +50,51 @@
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
     <p class="nyuryoku">今回の授業では、 <strong>HTMLテキストの要素</strong>, <strong>HTML文書の構成</strong>, <strong>ハイパーリンク</strong>, <strong>画像の埋め込み</strong>, <strong>説明リスト</strong> について学んだ。
       <br>HTML文書全体の構成を学んだことで、基本的なWebページを作成することができるようになった。
-      <br>身構えていたが今のところそんなに難しくはないのでこの調子で頑張っていきたい。</p>
+      <br>身構えていたが今のところそんなに難しくはないのでこの調子で頑張っていきたい。
+    </p>
     <p class="link">演習の成果:<a href="practice-html/elements.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank"> 演習1-4: HTMLの様々な要素 </a></p>
     
     <h3>第2回 CSS による Web ページの装飾</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
-    <p class="nyuryoku"></p>
+    <p class="nyuryoku">今回の授業では、CSSについて学んだ。CSSをHTMLに追加する方法, 特定の要素を指定する方法, リンクの色設定について学んだことで、このindex.htmlのようにWebページに色をつけたりすることができるようになった。
+      <br>数当てゲームやプロジェクト課題がまだどうなるかわからないのは不安だが、ここで学んだことを十全に活かせるようにしたい。
+    </p>
     <p class="link">演習の成果:<a href="practice-css/browser-intro.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank"> 演習2-3: ウェブブラウザ説明ページの装飾 </a></p>
 
     <h3>第3回 JavaScript の基本</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
-    <p class="nyuryoku"></p>
+    <p class="nyuryoku">今回の授業では、JavaScriptについて学んだ。コンソールを用いて設定したプログラムを実行することを学んだ。
+      <br>JavaScriptはプログラミングIで学んだJavaとかなり似ていて難しいこともしなかったので、どういう物なのかかなり理解することができた。
+    </p>
     <p class="link">演習の成果:<a href="practice-js/obj-practice.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank"> 演習3-6: オブジェクトの参照 </a></p>
 
     <h3>第4回 DOM と JavaScript</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
-    <p class="nyuryoku"></p>
+    <p class="nyuryoku">今回の授業では、DOMの一部を学んだ。テキストボックスとボタン、ラベルを配置したページを作成し、テキストボックスに入力された文字列を取り出す方法やラベルを書き換える方法などを学んだ。
+      <br>前回コンソールで実行していたプログラムをイベントハンドラを登録することでボタンのクリックで実行できるようになった。
+    </p>
     <p class="link">演習の成果:<a href="practice-eventdom/tashizan.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank"> 演習4-10: 足し算ページ </a></p>
 
     <h3>第5回 イベント処理</h3>
     <p class="info">(今回学習した事柄を説明してください.) (100文字以上)</p>
-    <p class="nyuryoku"></p>
+    <p class="nyuryoku">今回の授業では、DOMの前回学ばなかった部分を学んだ。DOMを使用して要素を新規作成、編集、削除する方法を学んだ。
+      <br>第３回の練習３−６で作成したobj-practice.jsでコンソールに出力していたものをボタンを押すことでページに出力することができるようになった。
+    </p>
     <p class="link">演習の成果:<a href="practice-dom2/dom2-exercise.html" 
                    title="1つ中のフォルダの別ファイルへのリンク" 
                    target="_blank"> 演習5-7: DOMプログラミング(2) </a></p>
+
+    <h2>工夫点，苦心点，強調点，感想（1000文字以上）</h2>
+    <p class="nyuryoku">
+    </p>
 
   </body>
 </html>
