--- a/index.html
+++ b/index.html
@@ -93,7 +93,22 @@
                    target="_blank"> 演習5-7: DOMプログラミング(2) </a></p>
 
     <h2>工夫点，苦心点，強調点，感想（1000文字以上）</h2>
-    <p class="nyuryoku">
+    <p class="nyuryoku">私は今回、index.htmlやproject.htmlを作成するにあたって、情報メディア実験のWebコンテンツ作成で学んだことを最大限に発揮するように工夫しました。
+      index.htmlにおいて、第１回の学習事項ではstrongを使った太字を使い、ページには第2回で学んだ文字や背景の色の変更、まだ行ったことのないリンクの色やリンクの上にカーソルを合わせた時下線を消すなどしました。
+      また、学んだことを活かして「プロジェクト課題について」の背景を虹色にしてみたりもしました。
+      project.htmlでは、検索結果が何件あるかを表示したり、グルメ情報を選んだので店名の部分のみ文字と背景の色を変えてわかりやすくしたりしました。
+      苦心点としては、project.htmlを作成する際1度表示した検索結果を消去する方法やG011キーなどサブジャンルが存在しないキーを検索した時の処理、検索結果が何件か表示する部分の位置や消去が難しかったです。
+      友人に教えてもらいほとんどは解決しましたが、友人は検索結果が何件か表示していなかったため、先輩に聞くことで何とか完成しました。
+      強調点は、index.htmlの「プロジェクト課題について」の背景を虹色のグラデーションにした部分と、project.htmlのli要素の「・」を消去したことです。
+      第２回でbackground: liner-gradientを利用した２色のグラデーションの作り方を学びましたが、資料を見ている際に３色以上のグラデーションのやり方を見つけたので、
+      左から15％までが赤、30までが橙、45％までが黄色、60％までが緑、75％までが青、95%までが藍色、残りが紫というように設定して虹色のグラデーションを作ってみました。
+      また、project.htmlで店名の背景を変更したときに、ul要素の背景を変更しているせいで店名の点の部分だけ色が変わらず違和感が出てしまいましたが、
+      第２回で学んだlist-style-type: none; を使用して表示した検索結果の点をなくしたことで、違和感をなくすことができました。
+      この２つが特に学んだことを自分なりの考えで活かすことができた点だと思います。私はこの授業を選択したとき、単位が取れれば何でもいいと思っていました。
+      ですが、実際受講してみるととても面白く、毎週授業が楽しみでした。初めて触れるJavaScriptも、思っていたよりJavaとの差が少なく、やり方を学べばすぐに理解することができました。
+      最初はプロジェクト課題が少し面倒くさそうだなと感じていて、実際作るのに苦戦して時間もかかりましたが、作っている間とても楽しかったです。
+      特にgourmet.jsの検索結果を表示するプログラムを作っている時は、これまでの授業で少しずつ作ってきたプログラムを使って必要なデータを取得し表示するプログラムが、
+      だんだん出来上がって形になっていくのがとてもワクワクしました。私は、この授業を受講することができてよかったと思います。
     </p>
 
   </body>
